gap input fix

--- a/wwwroot/css/houserules.css
+++ b/wwwroot/css/houserules.css
@@ -56,7 +56,7 @@
                 position: relative;
             }
 
-                input[type="text"] {
+                .rules-modal input[type="text"] {
                     width: 100%;
                     padding: 0.6em;
                     margin-bottom: 1.5em;
